# Edallumo

./: .gitignore  Cargo.toml  README.md  crates.js  diff.txt  help.html  memo.txt  package-lock.json  search-index.js  settings.html  src-files.js
.cursor/rules/: commands.mdc  data-models.mdc  frames-command.mdc  project-structure.mdc  rust.mdc
baiken/: all.html  constant.CHARS.html  constant.EMBED_COLOR.html  constant.HITBOX_DEFAULT.html  constant.IMAGE_DEFAULT.html  enum.AppError.html  enum.GuardType.html  fn.main.html  fn.on_error.html  index.html  sidebar-items.js  struct.CharInfo.html  struct.Data.html  struct.Gids.html  struct.ImageLinks.html  struct.MoveAliases.html  struct.MoveInfo.html  struct.Nicknames.html  type.Context.html  type.Error.html  type.Result.html
data/: nicknames.json
search.index/: 03eeee33e2cc.js  04e84f18c22e.js  0e846727a928.js  0f18b193c536.js  18111c862d3b.js  1bc568c56420.js  1e37539e13f1.js  1ea9e4cffffd.js  1ebe77d77665.js  227942d0411e.js  228df53eb6e3.js  23e9573cc048.js  23f578171f96.js  24b839351eea.js  270977e51411.js  27c71e2480ea.js  287596e4f755.js  2b8c9dcafc18.js  30e033671df4.js  31036851b21e.js  31681637a396.js  3359c1146ea7.js  35951575af4d.js  3631259c532f.js  381d36829896.js  38acae60302b.js  395b6a9dda3d.js  398f82d96e3f.js  3e7a514938b9.js  403a1d8c19df.js  425660525abf.js  4360c98799a4.js  46061a5e2ab8.js  470cc55e7148.js  47f992fad0b7.js  487964d6a11b.js  4c41b0dc2697.js  4db6c044aa97.js  4dbea1a56757.js  4e356855163e.js  (+22 more)
src/: async_utils.rs  check.rs  error.rs  find.rs  main.rs  models.rs  test_utils.rs  utils.rs
(+402 files in other folders)
