[package]
name = "baiken"
version = "0.19.0"
edition = "2021"
authors = ["yakiimoninja"]
repository = "https://github.com/yakiimoninja/baiken"
description = "A Discord bot that displays Guilty Gear Strive frame data."
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
serde = { version = "1.0.193", features = ["derive"] }
dotenv = "0.15"
ureq = { version = "2.9.0", features = ["charset"] }
md-5 = "0.10.6"
rand = "0.8.5"
colored = "2.0.4"
regex = "1.5.4"
tempfile = "3.5" 
toml = "0.5"
lazy_static = "1.5.0"
thiserror = "1.0.56"
anyhow = "1.0.79"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
futures = "0.3.30"
bitflags = "2.4.1"

[dev-dependencies]
mockall = "0.12.1"